[package]
name = "maestro_omp"
version = "0.1.0"
authors = ["Miheer Vaidya <m.vaidya@utah.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.2"

[dependencies]
lalrpop = "0.19.2"